--- a/src/components/form/UserForm.css
+++ b/src/components/form/UserForm.css
@@ -13,6 +13,8 @@
     margin-bottom: var(--tiny-margin);
 }
 #user-form input {
+    border: 1px solid var(--color-lightgray);
+    border-radius: var(--input-border-radius);
     font-size: 1rem;
     padding: 4px;
 }
@@ -27,5 +29,9 @@
     padding: 4px 16px;
 }
 #user-form button[type="submit"]:hover {
+    background-color: var(--color-purple-bright);
     cursor: pointer;
+}
+#user-form button[type="submit"]:active {
+    text-shadow: 0 0 2px #ffffff;
 }
