--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,14 @@
 :root {
-  --color-lightgray: #464646;
+  --color-gray: #464646;
+  --color-lightgray: #808080;
   --color-darkgray: #1e1d1e;
   --color-purple: rgba(76,11,86,1);
+  --color-purple-bright: rgba(114,31,128,1);
   --big-margin: 40px;
   --normal-margin: 20px;
   --small-margin: 10px;
   --tiny-margin: 8px; 
+  --input-border-radius: 4px;
 }
 
 * {
@@ -17,14 +20,17 @@
 body {
   background-color: var(--color-darkgray);
   font-size: 16px;
-  padding: 40px 25vw;
+  padding: var(--big-margin) 25vw;
+}
+.round-container {
+  border-radius: 10px;
+  margin-bottom: var(--big-margin);
 }
 @media (max-width: 500px){
   body{
-    padding: 20px 20px;
+    padding: var(--normal-margin);
   }
-}
-
-.round-container {
-  border-radius: 10px;
+  .round-container {
+    margin-bottom: var(--normal-margin);
+  }
 }
