--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   --color-darkgray: #1e1d1e;
   --color-purple: rgba(76,11,86,1);
   --color-purple-bright: rgba(114,31,128,1);
+  --color-red: #880000;
   --big-margin: 40px;
   --normal-margin: 20px;
   --small-margin: 10px;
