--- a/src/components/list/UsersList.css
+++ b/src/components/list/UsersList.css
@@ -14,7 +14,7 @@
 .users-list-container li {
     border: 1px solid var(--color-lightgray);
     border-radius: var(--input-border-radius);
-    overflow-x: scroll;
+    overflow-x: auto;
     padding: 8px;
     word-wrap: normal;
 }
